--- a/Lustrious/appsettings.json
+++ b/Lustrious/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Maps": {
+    "ApiKey": ""
+  },
+  "Frete": {
+    "BaseRate": "10",
+    "PerKm": "2.5",
+    "DistributorAddress": "R. Guaipá,678 - Vila Leopoldina, São Paulo - SP,05089-000"
+  }
 }
