fazendo alterações no uso de api]

--- a/Lustrious/appsettings.json
+++ b/Lustrious/appsettings.json
@@ -10,8 +10,12 @@
     "ApiKey": ""
   },
   "Frete": {
+    "Provider": "OpenRouteService",
     "BaseRate": "10",
     "PerKm": "2.5",
     "DistributorAddress": "R. Guaipá,678 - Vila Leopoldina, São Paulo - SP,05089-000"
+  },
+  "OpenRouteService": {
+    "ApiKey": ""
   }
 }
