--- a/Lustrious/Lustrious.csproj
+++ b/Lustrious/Lustrious.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MySql.Data" Version="9.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\imagens\Carrossel\" />
+  </ItemGroup>
+
 </Project>
